--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -1,148 +1,92 @@
-# **Projekttitel**
+= Autonome FPV-Drohne mit Companion-Computer und Sensorintegration
+:toc:
+:toclevels: 2
+:sectnums:
 
-**Autonome FPV-Drohne mit Companion-Computer und Sensorintegration**
+== Projektbeschreibung
 
-## **Projektbeschreibung**
+Ziel des Projekts ist die Entwicklung und Umsetzung einer *teilautonomen FPV-Drohne*, die sowohl manuell mit *DJI Goggles 3* und *DJI Remote Controller 3* gesteuert werden kann, als auch durch einen *Raspberry Pi* teilautonome Flugfunktionen ausführt.
 
-Ziel des Projekts ist die Entwicklung und Umsetzung einer **teilautonomen FPV-Drohne**, die sowohl manuell mit DJI Goggles 3 und DJI Remote Controller 3 gesteuert werden kann, als auch durch einen **Raspberry Pi** Teilautonome Flugfunktionen ausführt.
-
-Die Basis bildet ein **BNF-FPV-Drohnenmodell (z. B. iFlight Nazgul ECO)** mit integriertem **DJI O4 Air Pro Unit** für digitale Videoübertragung. Die Flugstabilisierung erfolgt über den vorhandenen **Flight Controller (BLITZ ATF435, Betaflight)**. Der Raspberry Pi wird als Erweiterung eingesetzt, um zusätzliche Algorithmen und Sensoren zu verarbeiten.
+Die Basis bildet ein *BNF-FPV-Drohnenmodell* (z. B. iFlight Nazgul ECO) mit integrierter *DJI O4 Air Pro Unit* für digitale Videoübertragung.
+Die Flugstabilisierung erfolgt über den vorhandenen *Flight Controller (BLITZ ATF435, Betaflight)*.
+Der Raspberry Pi dient als *Companion-Computer* zur Verarbeitung zusätzlicher Sensorik und Algorithmen.
 
 Geplante Features:
 
-* **Crash-Safer:** Notfallprozeduren zur Stabilisierung bei Kontrollverlust. 
+* *Crash-Safer:* Notfallprozeduren zur Stabilisierung bei Kontrollverlust
+* *Position Hold:* Drohne bleibt beim Loslassen der Steuerung an der Position
+* *Turtle Mode:* automatisches Aufrichten nach Crash
+* *Autopilot:* GPS-, LiDAR-, Ultraschall- und Kamera-basierte Navigation (YOLO)
+* *Auto-Hover / Auto-Brake*
+* *Webinterface:* Konfiguration, Telemetrie, Flugpfade
+* *Crash-Map:* Visualisierung von Unfällen
+* *Flight Logging & Strichliste*
 
-* **Position Hold**: Beim loslassen des Steuer Controllers bleibt Drohne neutral an der Position.
+== Projektziele
 
-* **Turtle Mode:** automatisches Aufrichten der Drohne nach Crash.
-
-* **Autopilot:** automatische Flugsteuerung basierend auf Sensordaten (GPS, LiDAR, Ultraschall, Kamera mit YOLO).
-
-* **Auto-Hover und Auto-Brake:** Stabilisieren der Drohne an Ort und Stelle bzw. kontrolliertes Abbremsen.
-
-* **Webinterface:** Eingabe von Parametern (z. B. Gewicht, Schub, Flugstil) sowie Darstellung von Telemetrie und Flugpfaden.
-
-* **Crash-Map:** Speicherung und Visualisierung von Unfällen im Webinterface.
-
-* **Flight Logging & Strichliste:** automatische Auswertung der Flüge.
-
----
-
-## **Projektziele**
-
-* Aufbau und Inbetriebnahme einer FPV-Drohne mit DJI O4 Air  Pro Unit.
-
-* Integration eines Raspberry Pi als Companion-Computer.
-
-* Entwicklung von Algorithmen für **Autopilot, Auto-Hover und Auto-Brake**.
-
-* Implementierung eines **Webinterfaces** zur Steuerung und Visualisierung.
-
-* Durchführung von Simulationen (Liftoff, Gazebo, Betaflight SITL) zur Minimierung von Hardware-Risiken.
-
+* Aufbau und Inbetriebnahme einer FPV-Drohne mit DJI O4 Air Pro Unit
+* Integration eines Raspberry Pi als Companion-Computer
+* Entwicklung von Algorithmen für *Autopilot*, *Auto-Hover* und *Auto-Brake*
+* Implementierung eines *Webinterfaces*
+* Simulationen (Liftoff, Gazebo, Betaflight SITL)
 * Praxistests
 
----
+== Projektumfang / Abgrenzung
 
-## **Projektumfang / Abgrenzung**
+=== Umfang
 
-**Umfang:**
+* *Hardware:* FPV-Drohne, Flight Controller, O4 Air Pro Unit, Raspberry Pi, Sensoren (GPS, Ultraschall/LiDAR, Kamera)
+* *Software:*
+Betaflight / ArduPilot, Companion-Software (Java/Python, YOLOv5),
+MAVLink/MAVSDK, Webinterface
 
-* Hardware: FPV-Drohne, Flight Controller, O4 Air Pro Unit, Raspberry Pi, Sensoren (GPS, Ultraschall/LiDAR, Kamera).
+=== Abgrenzung
 
-* Software: Betaflight/ArduPilot für Flight Controller, Companion-Software auf Raspberry Pi (Java/Python für YOLOv5 Modell), MAVSDK/MAVLink-Anbindung für Kommunikation zwischen Raspberry Pi und Flight Controller, Webinterface.
+* Keine Neuentwicklung eines eigenen Flight Controllers
+* Fokus auf *Hybridbetrieb aus Autonomie und FPV*, nicht reines Racing
 
-**Abgrenzung:**
+== Erwartete Ergebnisse
 
-* Keine vollständige Neuentwicklung eines Flight Controllers (Verwendung vorhandener Hardware).
+* Funktionsfähige hybride FPV-Drohne
+* Webplattform zur Konfiguration und Flugauswertung
+* Dokumentierte Simulator- und Realtests
+* Nachweis der Machbarkeit teilautonomer Systeme auf Consumer-Hardware
 
-* Fokus auf **Kombination von Autonomie und FPV-Steuerung**, nicht auf reinen FPV-Racing-Einsatz.
+== Minutes of Meeting
 
----
+* link:minutes-of-meetings/2025-11-25_Sprintplanning.html[Sprintplanning – 25.11.2025]
+* link:minutes-of-meetings/2025-12-23_Sprintplanning.html[Sprintplanning – 23.12.2025]
 
-## **Erwartete Ergebnisse**
-
-* Funktionsfähige **hybride FPV-Drohne** mit manueller und teilautonomer Steuerung.
-
-* **Webplattform** für Konfiguration und Flugdatenauswertung.
-
-* Dokumentierte Tests im Simulator und in realen Flügen.
-
-* Nachweis der technischen Machbarkeit von **teil-gestütztem Autopilot** auf Consumer-Hardware.
-
-== **Visualisierung von Technologien**
+== Visualisierung von Technologien
 
 image::img/bild1.png[]
 
-## **Visualisierung von Technologien**
+== Technologie-Stack
 
-**Backend:** 	Java mit Quarkus, Lombok evtl Web Fluxes für Reactive   
-**Datenbank:** 	PostGres um verschiedene Drohnen eines Accounts zu Managen bzw dort die Attribute    
-		ändern  
-**Frontend:** 	Angular / React Router  
-**Versioning:** 	Github mit Github Actions für Bildvergleiche für UI und Deployment auf   
-		Cloudflare  
-**Drohnen Tools:** MavLink für Kommunikation zwischen Rasp und Flight Controller,  
-Jolov5 Object Detection, BetaFlight \-\> Motoren steuerung, stabilisierung
+* *Backend:* Java (Quarkus)
+* *Datenbank:* PostgreSQL
+* *Frontend:* Angular oder React
+* *Versionierung:* GitHub, GitHub Actions, Deployment auf Cloudflare
+* *Drohnen-Tools:* MAVLink, YOLOv5, Betaflight
 
-
-[plantuml, my-drone-system, png]
+[plantuml, drone-system, png]
 ----
 @startuml
 !theme mars
 skinparam componentStyle uml2
 
-' Komponenten definieren
-component "Frontend" as Frontend <<Angular/React>>
-component "Backend" as Backend <<Java/Quarkus>>
-component "Datenbank" as Database <<PostgreSQL>>
-component "Drohnen-Tools" as DroneTools <<Raspberry Pi>>
-component "Versionskontrolle" as Versioning <<GitHub/CI>>
+component "Frontend\n React" as FE
+component "Backend\n(Quarkus)" as BE
+component "PostgreSQL" as DB
+component "Raspberry Pi\n(Companion Computer)" as RPI
+component "Flight Controller\n(Betaflight)" as FC
+component "GitHub / CI" as CI
 
-' Interne Tools innerhalb der Drohnen-Tools definieren
-package "Drohnen-Tools Details" {
-component "MavLink" as MavLink
-component "YOLOv5" as YOLOv5
-component "BetaFlight" as BetaFlight
-}
+FE --> BE : REST API
+BE --> DB : Persistenz
+RPI --> FC : MAVLink
+CI --> FE : Deploy
+CI --> BE : Deploy
 
-' Beziehungen definieren
-Frontend --> Backend : API-Aufrufe (HTTP/REST)
-Backend --> Database : Datenpersistenz
-MavLink --> BetaFlight : Kommunikation
-YOLOv5 --> BetaFlight : Objektinformationen
-Versioning --> Frontend : Deployment
-Versioning --> Backend : Deployment
-Versioning --> Database : Schema-Migrationen
-
-hide circle
-
-' Notizen hinzufügen
-note left of Frontend
-  UI zur Verwaltung von
-  Drohnen-Accounts
-end note
-
-note right of Backend
-  API für Account- und
-  Datenverwaltung
-end note
-
-note left of Database
-  Speichert Drohnenattribute
-  und Accounts
-end note
-
-note right of DroneTools
-  Läuft auf der Drohne,
-  sendet Daten direkt an den FlightController
-end note
-
-note bottom of Versioning
-  Automatisiert UI-Überprüfungen
-  und Deployments
-end note
 @enduml
 ----
-
-
